typescript/checker/tests/conformance/decorators/invalid/decoratorOnInterface.ts.stderr
error: Unexpected token Some(At)
 --> $DIR/tests/conformance/decorators/invalid/decoratorOnInterface.ts:3:1
  |
3 | @dec
  | ^

